--- a/src/scss/global/fonts.scss
+++ b/src/scss/global/fonts.scss
@@ -1,7 +1,8 @@
 @font-face {
-  font-family: 'Futura PT Book';
+  font-family: "Futura PT Book";
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url('../fonts/futura_pt_book.woff2') format('woff2'), url('../fonts/futura_pt_book.woff') format('woff');
+  src: url("../fonts/futura_pt_book.woff2") format("woff2"),
+    url("../fonts/futura_pt_book.woff") format("woff");
 }
