--- a/src/scss/blocks/button.scss
+++ b/src/scss/blocks/button.scss
@@ -27,12 +27,12 @@
   width: 200px;
   height: 40px;
   &::before {
-    content: '';
+    content: "";
     position: absolute;
     top: 0;
     left: 0;
     width: 40px;
     height: 40px;
-    background-image: url('../../../dist/images/icons/plus.svg');
+    background-image: url("../../../dist/images/icons/plus.svg");
   }
 }
