--- a/src/scss/blocks/page.scss
+++ b/src/scss/blocks/page.scss
@@ -2,7 +2,7 @@
   @include wrapper;
   color: $graphite;
   height: 100%;
-  font-family: 'Futura PT Book', 'Arial', 'Helvetica', sans-serif;
+  font-family: "Futura PT Book", "Arial", "Helvetica", sans-serif;
   font-weight: 400;
   font-size: 14px;
   line-height: 24px;
